# sp1-project-template

./: Cargo.toml  ENV_GUIDE.md  FAQ.md  ON_CHAIN_SETUP.md  README.md  RPC_GUIDE.md  SETUP_SUMMARY.md  setup_env.sh  setup_gpu_machine.sh
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol  DeploySimple.s.sol
contracts/src/: Fibonacci.sol  FibonacciSimple.sol
program/src/: main.rs
script/: Cargo.toml  verify_onchain.sh
