[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "network_evm"
path = "src/bin/network_evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "verify_onchain"
path = "src/bin/verify_onchain.rs"

[dependencies]
sp1-sdk = "5.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
dotenv = "0.15.0"
alloy-primitives = "0.7"
alloy-provider = "0.7"
alloy-network = "0.7"
alloy-rpc-types = "0.7"
alloy-signer-local = "0.7"
eyre = "0.6.8"
env_logger = "0.10.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
sp1-build = "5.0.0"
